--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/on-the-job/what-working-as-an-application-management-engineer-is-all-about/
 
 job:
-  image: /assets/img/pages/instagram/job-ux-manager.jpg
-  text: We're hiring a<br /><strong>User Experience Manager</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/203174?language=de
+  image: /assets/img/pages/instagram/job-product-owner.jpg
+  text: We're hiring a<br /><strong>Technical Product Owner</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/226186?language=en
