Rename file and change author description

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -589,7 +589,7 @@
 - id: sshaju
   name: Shohidur
   full_name: Shohidur Rahman Shaju
-  description: is a QA Engineer who always gives importance in delivering quality products to customers.
+  description: is a working student for Quality Assurance. His goal is to ensure high-quality products for our customers.
   image: sshaju.jpg
 
 - id: szikora
