--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,7 +1,7 @@
 blog:
-  image: /assets/img/pages/instagram/blog-post-application-management.jpg
-  text: What working as an Application Management Engineer is all about
-  link: /blog/on-the-job/what-working-as-an-application-management-engineer-is-all-about/
+  image: /assets/img/pages/instagram/blog-post-cypress-quality-assurance.jpg
+  text: <strong>Cypress - our tool of choice for Quality Assurance</strong>
+  link: /blog/methods-and-tools/cypress-our-tool-of-choice-for-quality-assurance/
 
 job:
   image: /assets/img/pages/instagram/job-product-owner.jpg
