--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -13,13 +13,13 @@
   description: With your knowledge of the tech stacks of website and commerce platforms you are responsible for several Scrum teams.
   location: Hamburg
 
-- title: Technical Writer - Social Media & Localization
-  link: https://epages-gmbh.jobs.personio.de/job/290299?language=de
-  description: Rock our developer relations on our social media channels and support the localization & translation management team.
+- title: Mid-level JavaScript Engineer
+  link: https://epages-gmbh.jobs.personio.de/job/201909?language=en
+  description: Build a responsive, modular, and highly user interactive web application with us that is easy to scale and to extend.
   location: Hamburg
 
 - title: User Experience Manager
-  link: https://epages-gmbh.jobs.personio.de/job/203174?language=de
+  link: https://epages-gmbh.jobs.personio.de/job/203174?language=en
   description: Join our agile user experience team and develop user-friendly interaction concepts for our ecommerce software.
   location: Hamburg
 
