Update job link

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/methods-and-tools/the-secret-of-incremental-and-iterative-software-development/
 
 job:
-  image: /assets/img/pages/instagram/job-product-owner.jpg
-  text: We're hiring a<br /><strong>Technical Product Owner</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/226186?language=en
+  image: /assets/img/pages/headers/public/abstract-art-blur-bright.jpg
+  text: We're hiring a<br /><strong>JavaScript Engineer (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/201909?language=en
