--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,7 +1,7 @@
 blog:
-  image: /assets/img/pages/headers/public/incremental-development.jpg
-  text: <strong>The secret of incremental and iterative software development</strong>
-  link: /blog/methods-and-tools/the-secret-of-incremental-and-iterative-software-development/
+  image: /assets/img/pages/headers/public/remote-onboarding.jpg
+  text: <strong>How to achieve a great remote onboarding experience</strong>
+  link: /blog/on-the-job/how-to-achieve-a-great-remote-onboarding-experience/
 
 job:
   image: /assets/img/pages/headers/public/abstract-art-blur-bright.jpg
