--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -517,7 +517,7 @@
 - id: ppriotto
   name: Paolo
   full_name: Paolo Priotto
-  description: is a Web Developer for all things in frontend. Although writing mostly JavaScript day in, day out, he never really gave up his passion for CSS.
+  description: is a frontend developer with no fear to hack together SQL, Shell or Java code until the error message goes away.
   image: ppriotto.jpg
 
 - id: rbeer
