Add review suggestions (text and header image)

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -517,7 +517,7 @@
 - id: ppriotto
   name: Paolo
   full_name: Paolo Priotto
-  description: is a frontend developer with no fear to hack together SQL, Shell or Java code until the error message goes away.
+  description: is a Frontend Developer with no fear to hack together SQL, Shell, or Java code until the error message goes away.
   image: ppriotto.jpg
 
 - id: rbeer
