Change publication date

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -133,7 +133,7 @@
 - id: cmenke
   name: Carina
   full_name: Carina Menke
-  description: is a JavaScript Engineer who is passionate about frontend development as well as design. Loves learning coding languages just as much as foreign languages.
+  description: is a JavaScript Engineer who is passionate about frontend development as well as design. She loves learning coding languages just as much as foreign languages.
   image: avatar_female.jpg
 
 - id: cmueller
