Change job title and link

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -5,5 +5,5 @@ blog:
 
 job:
   image: /assets/img/pages/headers/public/abstract-art-blur-bright.jpg
-  text: We're hiring a<br /><strong>JavaScript Engineer (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/201909?language=en
+  text: We're hiring a<br /><strong>Webdesigner (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/223110?language=de
