Change image, text and link

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/methods-and-tools/pdf-generation-with-java/
 
 job:
-  image: /assets/img/pages/headers/public/abstract-art-blur-bright.jpg
-  text: We're hiring a<br /><strong>Webdesigner (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/223110?language=de
+  image: /assets/img/pages/headers/public/coffee-writing-computer-blogging.jpg
+  text: We're hiring a<br /><strong>Senior JavaScript Engineer(m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/201909?language=en
