--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -5,5 +5,5 @@ blog:
 
 job:
   image: /assets/img/pages/headers/public/first-hackathon.jpg
-  text: We're hiring a<br /><strong>Webdesigner (m/f/d)</strong>
+  text: We're hiring a<br /><strong>Web Designer (m/f/d)</strong>
   link: https://epages-gmbh.jobs.personio.de/job/223110?language=de
