--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/methods-and-tools/pdf-generation-with-java/
 
 job:
-  image: /assets/img/pages/headers/public/abstract-art-blur-bright.jpg
-  text: We're hiring a<br /><strong>JavaScript Engineer (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/201909?language=en
+  image: /assets/img/pages/headers/public/first-hackathon.jpg
+  text: We're hiring a<br /><strong>Web Designer (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/223110?language=de
