--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,6 +1,6 @@
 blog:
   image: /assets/img/pages/headers/public/cross-functional-teams.jpg
-  text: <strong>The X factor or how I learned to stop worrying and love the backend</strong>
+  text: <strong style="font-size:1.8rem;">The X factor or how I learned to stop worrying and love the backend</strong>
   link: /blog/on-the-job/the-x-factor-or-how-i-learned-to-stop-worrying-and-love-the-backend/
 
 job:
