--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,7 +1,7 @@
 blog:
-  image: /assets/img/pages/headers/public/cross-functional-teams.jpg
-  text: <strong style="font-size:1.8rem;">The X factor or how I learned to stop worrying and love the backend</strong>
-  link: /blog/on-the-job/the-x-factor-or-how-i-learned-to-stop-worrying-and-love-the-backend/
+  image: /assets/img/pages/headers/public/coding-bootcamp.jpg
+  text: <strong style="font-size:1.8rem;">How I shifted careers after a coding bootcamp and became a developer</strong>
+  link: /blog/on-the-job/how-i-shifted-careers-after-a-coding-bootcamp-and-became-a-developer/
 
 job:
   image: /assets/img/pages/headers/public/first-hackathon.jpg
