Change image, text and link for the job

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/on-the-job/how-i-shifted-careers-after-a-coding-bootcamp-and-became-a-developer/
 
 job:
-  image: /assets/img/pages/headers/public/first-hackathon.jpg
-  text: We're hiring a<br /><strong>Web Designer (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/223110?language=de
+  image: /assets/img/pages/headers/public/agile-roadmap.jpg
+  text: We're hiring a<br /><strong>Product Owner (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/226186?language=en
