--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -70,6 +70,12 @@
   description: is a Java Developer, who is passionate about clean code, keen on Open Source, and likes to be on the move.
   image: asasin.png
 
+- id: aschroeder
+  name: Alicia
+  full_name: Alicia Schröder
+  description: is part of our technical writing team. She loves to create creative social media content and usable technical documentation for our software.
+  image: avatar_female.jpg
+
 - id: azimmermann
   name: Anne
   full_name: Anne Debora Zimmermann
