Add review suggestions

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -73,7 +73,7 @@
 - id: aschroeder
   name: Alicia
   full_name: Alicia Schröder
-  description: is part of our technical writing team. She loves to create creative social media content and usable technical documentation for our software.
+  description: is part of our Technical Writing team. She loves writing great help articles for our software and crafting creative social media content.
   image: avatar_female.jpg
 
 - id: azimmermann
