New: Api for newbies

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -73,7 +73,7 @@
 - id: azimmermann
   name: Anne
   full_name: Anne Debora Zimmermann
-  description: is a Frontend Designer. She is keen on User Interface and Web Design, and loves to combine the art of design with the art of coding.
+  description: is a multi-passionate front-end dude. She is keen on User Interface and Web Design, and loves to combine the art of design with the art of coding.
   image: azimmermann.jpg
 
 - id: bbader
