Change image, text and link for the new job story

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/techcomm-and-socialmedia/why-good-technical-documentation-is-important/
 
 job:
-  image: /assets/img/pages/headers/public/agile-roadmap.jpg
-  text: We're hiring a<br /><strong>Product Owner (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/226186?language=en
+  image: /assets/img/pages/headers/application-management-interview.jpg
+  text: We're hiring a<br /><strong>Senior Java Developer (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/202115?language=en
