Correct location for the Software Developer 3rd Party Integration

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -16,7 +16,7 @@
 - title: Software Developer - 3rd Party Integration, REST API (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/202173?language=en
   description: Develop connectors that integrate third-party systems, such as payment gateways or product portals, into our ecommerce platform.
-  location: Hamburg
+  location: Barcelona
 
 - title: Technical Product Owner (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/226186?language=en
