--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/coding/three-simple-to-use-apis-for-newbies/
 
 job:
-  image: /assets/img/pages/headers/public/agile-roadmap.jpg
-  text: We're hiring a<br /><strong>Product Owner (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/226186?language=en
+  image: /assets/img/pages/headers/public/application-management-interview.jpg
+  text: We're hiring a<br /><strong>Senior Java Developer (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/202115?language=en
