Delete UX Manager and add Scrum Master

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -23,7 +23,7 @@
   description: With your knowledge of the tech stacks of website and commerce platforms you are responsible for several Scrum teams.
   location: Hamburg
 
-- title: User Experience Manager (m/f/d)
-  link: https://epages-gmbh.jobs.personio.de/job/203174?language=en
-  description: Join our agile user experience team and develop user-friendly interaction concepts for our ecommerce software.
-  location: Hamburg
+- title: Scrum Master (m/f/d)
+  link: https://epages-gmbh.jobs.personio.de/job/251502?language=en
+  description: Support two Scrum teams by identifying and resolving problems, collaborate with other Scrum Masters, and improve the cross-location cooperation.
+  location: Jena
