--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -25,5 +25,5 @@
 
 - title: Scrum Master (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/251502?language=en
-  description: Support two Scrum teams by identifying and resolving problems, collaborate with other Scrum Masters, and improve the cross-location cooperation.
+  description: Support two Scrum teams, collaborate with other Scrum Masters, and improve the cross-location cooperation.
   location: Jena
