--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -88,6 +88,12 @@
   description: is an experienced Technical Communicator. Her heart beats for UI writing, localization, and API documentation.
   image: bbader.jpg
 
+- id: bdelafuente
+  name: Borja
+  full_name: Borja de la Fuente
+  description: is a Ruby on Rails Developer who is always eager to learn new things.
+  image: avatar_male.jpg
+
 - id: bklein
   name: Bastian
   full_name: Bastian
