Change image, text, and link for the new job story

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/methods-and-tools/finding-our-go-to-video-conferencing-platform/
 
 job:
-  image: /assets/img/pages/headers/public/application-management-interview.jpg
-  text: We're hiring a<br /><strong>Senior Java Developer (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/202115?language=en
+  image: /assets/img/pages/headers/public/journey-developer.jpg
+  text: We're hiring a<br /><strong>Ruby Developer (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/202168?language=en
