Change image, text and link for the new blog post

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,7 +1,7 @@
 blog:
-  image: /assets/img/pages/headers/public/pexels-conference.jpeg
-  text: <strong>Finding our go-to video conferencing platform</strong>
-  link: /blog/methods-and-tools/finding-our-go-to-video-conferencing-platform/
+  image: /assets/img/pages/headers/public/experience-maps.jpg
+  text: <strong>Why experience maps help to create better roadmaps</strong>
+  link: /blog/ux-and-design/why-experience-maps-help-to-create-better-roadmaps/
 
 job:
   image: /assets/img/pages/headers/public/journey-developer.jpg
