--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -23,7 +23,7 @@
   description: With your knowledge of the tech stacks of website and commerce platforms you are responsible for several Scrum teams.
   location: Hamburg
 
-- title: Scrum Master (m/f/d)
-  link: https://epages-gmbh.jobs.personio.de/job/251502?language=en
-  description: Support two Scrum teams, collaborate with other Scrum Masters, and improve the cross-location cooperation.
-  location: Jena
+- title: Internship Webdesign (m/f/d)
+  link: https://epages-gmbh.jobs.personio.de/job/359886?language=
+  description: Join our Design & Consult team for 6 months to 1 year and support them by creating and implementing individual designs for our merchants.
+  location: Barcelona
