Change job to Full Stack Developer

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -23,7 +23,7 @@
   description: With your knowledge of the tech stacks of website and commerce platforms you are responsible for several Scrum teams.
   location: Hamburg
 
-- title: Internship Webdesign (m/f/d)
-  link: https://epages-gmbh.jobs.personio.de/job/359886?language=
-  description: Join our Design & Consult team for 6 months to 1 year and support them by creating and implementing individual designs for our merchants.
-  location: Barcelona
+- title: Full Stack Developer (m/f/d)
+  link: https://epages-gmbh.jobs.personio.de/job/384247?language=
+  description: Be a part of a cross-functional team and use your Java and/or TypeScript skills to further develop our new ecommerce platform.
+  location: Hamburg
