--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -25,5 +25,5 @@
 
 - title: Full Stack Developer (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/384247?language=
-  description: Be a part of a cross-functional team and use your Java and/or TypeScript skills to further develop our new ecommerce platform.
+  description: Be part of a cross-functional team and use your Java and/or TypeScript skills to further develop our new ecommerce platform.
   location: Hamburg
