Update job page (#729)
* Change the job posting because the Scrum Master is no longer available.
* Change job to Full Stack Developer
* Delete "a"

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -23,7 +23,7 @@
   description: With your knowledge of the tech stacks of website and commerce platforms you are responsible for several Scrum teams.
   location: Hamburg
 
-- title: Scrum Master (m/f/d)
-  link: https://epages-gmbh.jobs.personio.de/job/251502?language=en
-  description: Support two Scrum teams, collaborate with other Scrum Masters, and improve the cross-location cooperation.
-  location: Jena
+- title: Full Stack Developer (m/f/d)
+  link: https://epages-gmbh.jobs.personio.de/job/384247?language=
+  description: Be part of a cross-functional team and use your Java and/or TypeScript skills to further develop our new ecommerce platform.
+  location: Hamburg
