--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,5 +1,5 @@
-- title: jobwalk Jena
-  link: https://jena.jobwalk.city/
-  date: 25. Sep 2021
+- title: Currently no events are planned.
+  link: 
+  date: 
   time:
-  address: Marktplatz Jena<br>Markt 1<br>07743 Jena
+  address: We keep you updated.
