--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,5 +1,5 @@
-- title: Currently no events are planned.
+- title: There are no events planned at the moment.
   link: 
   date: 
   time:
-  address: We keep you updated.
+  address: We will keep you updated.
