Update the event page for the "Firmenkontaktmesse 2021" at the FH Wedel (#734)
* Update the event page for the "Firmenkontaktmesse 2021" at the FH Wedel.
* Remove trailing whitespaces

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,5 +1,5 @@
-- title: There are no events planned at the moment.
-  link:
-  date:
+- title: Job fair FH Wedel
+  link: https://www.fh-wedel.de/bewerben/beratung/kennenlernen/firmenkontaktmesse/
+  date: 16. Nov 2021
   time:
-  address: We will keep you updated.
+  address: Digital event
