--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -430,6 +430,12 @@
   description: is an experienced Software Engineer with a degree in Technical Informatics. His focus is on backend implementations for our products Base and Now.
   image: mhoehn.jpg
 
+- id: mjacobs
+  name: Martina
+  full_name: Martina Jacobs
+  description: TBD
+  image: avatar_female.jpg
+
 - id: mkofler
   name: Miriam
   full_name: Miriam
