--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -433,7 +433,7 @@
 - id: mjacobs
   name: Martina
   full_name: Martina Jacobs
-  description: TBD
+  description: Martina Jacobs is part of our UX team and focus on a great usability of our products for our customers. 
   image: avatar_female.jpg
 
 - id: mkofler
