--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -433,7 +433,7 @@
 - id: mjacobs
   name: Martina
   full_name: Martina Jacobs
-  description: is part of our UX team and focus on a great usability of our products for our customers.
+  description: is a crucial member of our UX team. Her focus is on improving the usability of our products to transform our merchants from ecommerce novices to successful online shop professionals with zero downtime.
   image: avatar_female.jpg
 
 - id: mkofler
