--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,7 +1,7 @@
 blog:
-  image: /assets/img/pages/headers/public/5-things-learning.jpg
-  text: <strong>5 most valuable things I learned in my 10+ year career</strong>
-  link: /blog/tech-stories/5-most-valuable-things-i-learned-in-my-10-plus-year-career/
+  image: /assets/img/pages/headers/public/onboarding_more_than_hello.jpg
+  text: <strong style="font-size:2.0rem;">Why “onboarding” should be much more than saying “hello” to customers</strong>
+  link: blog/ux-and-design/why-onboarding-should-be-much-more-than-saying-hello-to-customers/
 
 job:
   image: /assets/img/pages/headers/public/onboarding.jpg
