Update the instagram link page and the dev portal job page

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/ux-and-design/why-onboarding-should-be-much-more-than-saying-hello-to-customers/
 
 job:
-  image: /assets/img/pages/headers/public/onboarding.jpg
-  text: We're hiring a<br /><strong style="font-size:2.0rem;">Software Developer - 3rd Party Integration, REST API (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/202173
+  image: /assets/img/pages/headers/public/task.jpg
+  text: We're hiring a<br /><strong style="font-size:2.0rem;">Technical Writer - API Documentation & Social Media (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/522686
