Apply some of the suggestions

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,6 +1,6 @@
-- title: Frontend Developer (m/f/d)
+- title: Frontend Developer HTML/CSS (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/224109
-  description: With your sense for modern UI design and aesthetics you create the visual appearance of our products and drive the visual identity.
+  description: With your sense for modern UI design and aesthetics, you create the visual appearance of our products and drive their visual identity.
   location: Hamburg
 
 - title: Senior Java Developer (m/f/d)
@@ -8,14 +8,14 @@
   description: Bring your knowledge of Java and Kotlin to work on a microservice-based architecture for our new ecommerce platform.
   location: Hamburg
 
-- title: JavaScript Engineer (m/f/d)
+- title: Senior JavaScript Engineer (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/201909
   description: Build a responsive, modular, and highly user interactive web application with us that is easy to scale and to extend.
   location: Hamburg
 
 - title: Technical Writer - API Docs & Social Media (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/522686
-  description: Empower developers to create awesome apps by taking care of our API documentation and get creative by creating content for our social media channels.
+  description: Empower developers to create awesome apps by taking care of our API docs and get creative with our social media channels.
   location: Hamburg
 
 - title: Technical Product Owner (m/f/d)
@@ -25,5 +25,5 @@
 
 - title: User Experience Designer (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/203174
-  description: Keep an overview of the UX of all products and develop user-friendly interaction concepts by working closely with our product management team.
+  description: Keep an overview of our products' UX and develop user-friendly interaction concepts while working closely with our product management team.
   location: Hamburg
