Capitalize Social Media

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -15,7 +15,7 @@
 
 - title: Technical Writer - API Docs & Social Media (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/522686
-  description: Empower developers to create awesome apps by taking care of our API docs and get creative with our social media channels.
+  description: Empower developers to create awesome apps by taking care of our API docs and get creative with our Social Media channels.
   location: Hamburg
 
 - title: Technical Product Owner (m/f/d)
