Update job title for the TechWriter

--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -5,5 +5,5 @@ blog:
 
 job:
   image: /assets/img/pages/headers/public/task.jpg
-  text: We're hiring a<br /><strong style="font-size:2.0rem;">Technical Writer - API Documentation & Social Media (m/f/d)</strong>
+  text: We're hiring a<br /><strong>Technical Writer (m/f/d)</strong>
   link: https://epages-gmbh.jobs.personio.de/job/522686
