--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -13,7 +13,7 @@
   description: Build a responsive, modular, and highly user interactive web application with us that is easy to scale and to extend.
   location: Hamburg
 
-- title: Technical Writer - API Docs & Social Media (m/f/d)
+- title: Technical Writer (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/522686
   description: Empower developers to create awesome apps by taking care of our API docs and get creative with our Social Media channels.
   location: Hamburg
