Update job page.

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,6 +1,6 @@
-- title: Frontend Developer HTML/CSS (m/f/d)
-  link: https://epages-gmbh.jobs.personio.de/job/224109
-  description: With your sense for modern UI design and aesthetics, you create the visual appearance of our products and drive their visual identity.
+- title: Full Stack Developer (m/f/d)
+  link: https://epages-gmbh.jobs.personio.de/job/384247
+  description: Improve our platform with your knowledge of Java or TypeScript in a cross-functional team and work on a microservice-based architecture.
   location: Hamburg
 
 - title: Senior Java Developer (m/f/d)
@@ -15,7 +15,7 @@
 
 - title: Technical Writer (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/522686
-  description: Empower developers to create awesome apps by taking care of our API docs and get creative with our Social Media channels.
+  description: Combine your interest in tech with your love for writing and empower developers to create awesome apps by taking care of our API docs.
   location: Hamburg
 
 - title: Technical Product Owner (m/f/d)
