--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,6 +1,6 @@
 - title: Full Stack Developer (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/384247
-  description: Improve our platform with your knowledge of Java or TypeScript in a cross-functional team and work on a microservice-based architecture.
+  description: Be part of a cross-functional team and use your Java and/or TypeScript skills to further develop our new ecommerce platform.
   location: Hamburg
 
 - title: Senior Java Developer (m/f/d)
