--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -78,7 +78,7 @@
 
 - id: azimmermann
   name: Anne
-  full_name: Anne Debora Zimmermann
+  full_name: Anne D. Zimmermann-Zwick
   description: is a multi-passionate frontend dude. She is keen on User Interface and Web Design, and loves to combine the art of design with the art of coding.
   image: azimmermann.jpg
 
