--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -1,7 +1,7 @@
 blog:
-  image: /assets/img/pages/headers/public/agency-to-freelancer.jpg
-  text: <strong>From translation agency to freelance translators</strong>
-  link: /blog/language-and-localization/from-translation-agency-to-freelance-translators/
+  image: /assets/img/pages/headers/private/survey-header_epages_plain.png
+  text: <strong>Let's talk about numbers 2022</strong>
+  link: /blog/on-the-job/lets-talk-about-numbers-2022/
 
 job:
   image: /assets/img/pages/headers/public/task.jpg
