Update author descriptions, exhibitions, instagram link page and the jobs page.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -49,7 +49,7 @@
 - id: amahaiuddin
   name: Aroso
   full_name: Aroso Mahaiuddin
-  description: is a working student in our TechComm team, who is passionate about creating content for our epagesdevs social media channels.
+  description: is a passionate content creator and loves crafting creative social media content.
   image: amahaiuddin.jpg
 
 - id: aortmann
@@ -73,7 +73,7 @@
 - id: aschroeder
   name: Alicia
   full_name: Alicia Schröder
-  description: is part of our Technical Writing team. She loves writing great help articles for our software and crafting creative social media content.
+  description: is a TechWriter and Localization Manager, who loves playing around with words and crafting texts that are comprehensible for everyone.
   image: avatar_female.jpg
 
 - id: azimmermann
