--- a/_data/instagram.yml
+++ b/_data/instagram.yml
@@ -4,6 +4,6 @@ blog:
   link: /blog/on-the-job/lets-talk-about-numbers-2022/
 
 job:
-  image: /assets/img/pages/headers/public/task.jpg
-  text: We're hiring a<br /><strong>Technical Writer (m/f/d)</strong>
-  link: https://epages-gmbh.jobs.personio.de/job/522686
+  image: /assets/img/pages/headers/public/pdf-generation.jpg
+  text: We're hiring a<br /><strong>(Senior) Java Developer (m/f/d)</strong>
+  link: https://epages-gmbh.jobs.personio.de/job/202115
