--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -13,10 +13,10 @@
   description: Build a responsive, modular, and highly user interactive web application with us that is easy to scale and to extend.
   location: Hamburg
 
-- title: Technical Writer (m/f/d)
-  link: https://epages-gmbh.jobs.personio.de/job/522686
-  description: Combine your interest in tech with your love for writing and empower developers to create awesome apps by taking care of our API docs.
-  location: Hamburg
+- title: Ruby Developer (m/f/d)
+  link: https://epages-gmbh.jobs.personio.de/job/202168
+  description: With your knowledge of Ruby and JavaScript, you'll support our Rails team to further develop our crucial in-house applications.
+  location: Bilbao
 
 - title: Technical Product Owner (m/f/d)
   link: https://epages-gmbh.jobs.personio.de/job/226186
