--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -73,7 +73,7 @@
 - id: aschroeder
   name: Alicia
   full_name: Alicia Schröder
-  description: is a TechWriter and Localization Manager, who loves playing around with words and crafting texts that are comprehensible for everyone.
+  description: is a Tech Writer and Localization Manager who loves playing around with words and crafting texts that are comprehensible for everyone.
   image: avatar_female.jpg
 
 - id: azimmermann
