--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,5 +1,5 @@
-- title: Job fair FH Wedel
-  link: https://www.fh-wedel.de/bewerben/beratung/kennenlernen/firmenkontaktmesse/
-  date: 16. Nov 2021
+- title:
+  link:
+  date:
   time:
-  address: Digital event
+  address:
