Update "About"-page for the DevPortal

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -440,7 +440,7 @@
   name: Miriam
   full_name: Miriam
   description: is a Scrum Master who is keen on promoting an agile culture. She has a passion for coaching, which she integrates in her work with the teams.
-  image: mkofler.jpg
+  image: mkofler.jpeg
 
 - id: mkohl
   name: Martin
