--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -25,5 +25,5 @@
 
 - title: Internship Webdesign (m/f/d) - 6 months or 1 year
   link: https://epages-gmbh.jobs.personio.de/job/359886
-  description: Grown and learn in our Design & Consult team by advising our international customers and creating individual designs.
+  description: Grow and learn in our Design & Consult team by advising our international customers and creating individual designs.
   location: Barcelona
